--- a/yoldi-profile/.eslintrc.json
+++ b/yoldi-profile/.eslintrc.json
@@ -39,7 +39,14 @@
         "react/self-closing-comp": "error",
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/consistent-type-definitions": "error",
-        "@typescript-eslint/no-this-alias": "error"
+        "@typescript-eslint/no-this-alias": "error",
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "argsIgnorePattern": "^_",
+            "ignoreRestSiblings": true
+          }
+        ]
       }
     }
   ]
