--- a/yoldi-profile/package.json
+++ b/yoldi-profile/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.20.1",
+    "axios": "^1.7.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
