--- a/yoldi-profile/package.json
+++ b/yoldi-profile/package.json
@@ -15,8 +15,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5",
-    "zod": "^3.23.8"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
